fixed anime desc overflowing and changed logged out anime status

--- a/react-app/src/components/AnimePage/AnimePage.css
+++ b/react-app/src/components/AnimePage/AnimePage.css
@@ -129,7 +129,12 @@ html, body {
 .anime-desc-content {
     width: 100%;
     height: 180px;
+    overflow-y: scroll;
 }
+
+.anime-desc-content::-webkit-scrollbar {
+    display: none;
+  }
 
 .anime-desc-content p {
     color: rgba(114,138,161, 1);
